Spring-boot 3 upgrade in traversal
Issue-ID: AAI-4115
Change-Id: I509bcc0a7893bb84ae46a774cea10b9169d7083c
Signed-off-by: Fiete Ostkamp <Fiete.Ostkamp@telekom.de>